cabal-version:      2.0
name:               haskell-servant-github-io
version:            0.4.0
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    base       ^>=4.11
                  , hakyll     ^>=4.12.3.0
                  , pandoc     ^>=2.2.1
                  , containers ^>=0.5.11.0
  ghc-options:      -threaded
  default-language: Haskell2010
